Namespace.yaml
apiVersion: v1  
kind: Namespace  
metadata:  
   name: en-322
   labels:  
     name: en-322
