config-server-online.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: en-322
  name: config-server
  labels:
    app: config-server
spec:
  ports:
  - port: 4000
    name: config-server
  clusterIP: None
  selector:
    app: config-server
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  namespace: en-322
  name: config-server
spec:
  serviceName: "config-server"
  replicas: 1
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
      - name: server-api
        image: hub.c.163.com/lengbing/k8s:config-server-0.2
        ports:
        - containerPort: 4000
          name: config-server
