eureka-server-admin-online.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: en-322
  name: server-api
  labels:
    app: server-api
spec:
  ports:
  - port: 4000
    name: server-api
  clusterIP: None
  selector:
    app: server-api
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  namespace: en-322
  name: server-api
spec:
  serviceName: "server-api"
  replicas: 1
  template:
    metadata:
      labels:
        app: server-api
    spec:
      containers:
      - name: server-api
        image: hub.c.163.com/lengbing/k8s:eureka-server-admin-0.3
        ports:
        - containerPort: 4000
          name: server-api
