eureka-server-online.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: en-322
  name: eureka-server
  labels:
    app: eureka-server
spec:
  ports:
  - port: 4000
    name: eureka-server
  clusterIP: None
  selector:
    app: eureka-server
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  namespace: en-322
  name: eureka-server
spec:
  serviceName: "eureka-server"
  replicas: 1
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
      - name: eureka-server
        image: hub.c.163.com/lengbing/k8s:eureka-server-0.2
        ports:
        - containerPort: 4000
          name: eureka-server
