kafka.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: en-322
  name: kafka
  labels:
    app: kafka
spec:
  ports:
  - port: 4000
    name: kafka
  clusterIP: None
  selector:
    app: kafka
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  namespace: en-322
  name: kafka
spec:
  serviceName: "kafka"
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: hub.c.163.com/lengbing/k8s:kafka
        ports:
        - containerPort: 4000
          name: kafka
