rc.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: config-17
  labels:
    app: config-17
spec:
  ports:
  - port: 4000
    name: config-17
  
  selector:
    app: config-17
