server.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: config-17
  labels:
    app: config-17
spec:
  ports:
  - port: 4000
    name: config-17
  clusterIP: None
  selector:
    app: config-17
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: config-17
spec:
  serviceName: "config-17"
  replicas: 1
  template:
    metadata:
      labels:
        app: config-17
    spec:
      containers:
      - name: config-17
        image: hub.c.163.com/lengbing/k8s:server17
        ports:
        - containerPort: 4000
          name: config-17
