service-feign-online.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: en-322
  name: service-feign
  labels:
    app: service-feign
spec:
  ports:
  - port: 4000
    name: service-feign
  clusterIP: None
  selector:
    app: service-feign
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  namespace: en-322
  name: service-feign
spec:
  serviceName: "service-feign"
  replicas: 1
  template:
    metadata:
      labels:
        app: service-feign
    spec:
      containers:
      - name: service-feign
        image: hub.c.163.com/lengbing/k8s:service-feign-0.2
        ports:
        - containerPort: 4000
          name: service-feign
