service-user-online.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: en-322
  name: service-user
  labels:
    app: service-user
spec:
  ports:
  - port: 4000
    name: service-user
  clusterIP: None
  selector:
    app: service-user
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  namespace: en-322
  name: service-user
spec:
  serviceName: "service-user"
  replicas: 1
  template:
    metadata:
      labels:
        app: service-user
    spec:
      containers:
      - name: service-user
        image: hub.c.163.com/lengbing/k8s:service-user-0.2
        ports:
        - containerPort: 4000
          name: service-user
