user-api.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: en-322
  name: user-api
  labels:
    app: user-api
spec:
  ports:
  - port: 4000
    name: user-api
  clusterIP: None
  selector:
    app: user-api
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  namespace: en-322
  name: user-api
spec:
  serviceName: "user-api"
  replicas: 1
  template:
    metadata:
      labels:
        app: user-api
    spec:
      containers:
      - name: user-api
        image: hub.c.163.com/lengbing/k8s:user-service-0.5
        ports:
        - containerPort: 4000
          name: user-api
