userinfo-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: en-322
  name: userinfo
  labels:
    app: userinfo
spec:
  ports:
  - port: 4000
    name: userinfo
  clusterIP: None
  selector:
    app: userinfo
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  namespace: en-322
  name: userinfo
spec:
  serviceName: "userinfo"
  replicas: 1
  template:
    metadata:
      labels:
        app: userinfo
    spec:
      containers:
      - name: userinfo
        image: hub.c.163.com/lengbing/k8s:user-service-11
        ports:
        - containerPort: 4000
          name: userinfo
