zuul-online.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: en-322
  name: zuul
  labels:
    app: zuul
spec:
  ports:
  - port: 4000
    name: zuul
  clusterIP: None
  selector:
    app: zuul
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  namespace: en-322
  name: zuul
spec:
  serviceName: "zuul"
  replicas: 3
  template:
    metadata:
      labels:
        app: zuul
    spec:
      containers:
      - name: zuul
        image: hub.c.163.com/lengbing/k8s:eureka-zuul-0.1
        ports:
        - containerPort: 4000
          name: zuul
