config-server-ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: en-322
  name: config-server
spec:
  rules:
  - host: config-server.com
    http:
      paths:
      - path: /
        backend:
          serviceName: config-server
          servicePort: 4000
