ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: en-322
  name: eureka-server
spec:
  rules:
  - host: eureka-server.com
    http:
      paths:
      - path: /
        backend:
          serviceName: eureka-server
          servicePort: 4000
