zuul-ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: en-322
  name: zuul
spec:
  rules:
  - host: zuul.com
    http:
      paths:
      - path: /
        backend:
          serviceName: zuul
          servicePort: 4000
